# dsda-doom-demo-extraction

prboom2/: CMakeLists.txt  vcpkg.json
prboom2/cmake/: config.h.cin
prboom2/data/lumps/: dsdahud.lmp  dsdatc.lmp
prboom2/src/: CMakeLists.txt  am_map.c  d_client.c  d_deh.c  d_deh.h  d_englsh.h  d_main.c  d_main.h  d_player.h  doomstat.h  dsda.c  dsda.h  e6y.c  e6y.h  f_finale.c  f_finale.h  g_game.c  g_game.h  g_overflow.c  g_overflow.h  gl_main.c  gl_missingtexture.c  gl_preprocess.c  gl_struct.h  hu_stuff.c  hu_stuff.h  i_sound.h  i_system.h  i_video.h  info.c  lprintf.c  lprintf.h  m_cheat.c  m_menu.c  m_menu.h  m_misc.c  p_ceilng.c  p_doors.c  p_enemy.c  p_enemy.h  (+37 more)
prboom2/src/SDL/: i_main.c  i_sound.c  i_system.c  i_video.c
prboom2/src/dsda/: ambient.cpp  args.c  args.h  brute_force.c  brute_force.h  build.c  build.h  compatibility.c  configuration.c  configuration.h  console.c  console.h  death.c  demo.c  demo.h  excmd.c  excmd.h  exdemo.c  exdemo.h  exhud.c  exhud.h  features.c  features.h  ghost.c  global.c  hud_components.h  input.h  key_frame.c  mapinfo.c  mapinfo.h  playback.c  preferences.c  save.c  save.h  settings.c  settings.h  skip.c  sndinfo.c  sndinfo.h  split_tracker.c  (+8 more)
prboom2/src/dsda/hud_components/: composite_time.c  message.c  secret_message.c
prboom2/src/dsda/mapinfo/: doom.c  doom.h  hexen.c  hexen.h  legacy.c  legacy.h  u.c  u.h
prboom2/src/dsda/mapinfo/doom/: parser.cpp  parser.h
prboom2/src/heretic/: d_main.c  f_finale.c  in_lude.c  info.c  mn_menu.c  mn_menu.h  p_action.h  sounds.c
prboom2/src/hexen/: a_action.c  f_finale.c  h2_main.c  in_lude.c  info.c  p_acs.c  p_anim.c  p_things.c  sn_sonix.c  sounds.c
